--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -96,7 +96,7 @@
 		    <p style="text-indent:2em ">Code and Cryptography are two foundations of communication and CyberSecurity. They protect data, storage, transmission and processing.</a><br/>
                      </div>
 		    <div class="footer2 removeborder">
-		 <p style="text-indent:2em "> CC symposium would like to invit well-known researchers all over the world to present their best works about state-of-art, research trends and applications on Code and Cryptography. Everyone, who does the best works on above fields, will be invited to attend CC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.</a><br/>
+		 <p style="text-indent:2em "> International Code and Cryptography and Application Conference would like to invit well-known researchers all over the world to present their best works about state-of-art, research trends and applications on Code and Cryptography. Everyone, who does the best works on above fields, will be invited to attend CCC conference, and present their works. We would like to provid tranvel funding for the invited speakers.</a><br/>
                
 		  
                      <p style="text-indent:2em "><a href="CC-2018.html">CCC Conference-2018</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="CC-2019.html">CCC Conference-2019</a> <br/>
