--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -89,15 +89,17 @@
             <div class="introdution">
             <div id="theme">
                  <p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png"  style="width: 210px; height: 213px; " ></a> <br/>
-		    <p style="text-indent:2em ">With rapid development of cyberspace security, artificial intelligence and cloud computing, researchers in academia and industry have constructed a large number of schemes, and designed many algorithms. In the meanwhile, the needs of industry and users are also growing urgently. Therefore, it is necessary to solve the software and hardware implementations of designed schemes and algorithms. The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation provide a good foundation and opportunity for solving the above problems.<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp; SHDI symposium would like to invit well-known researchers all over the world to present their best works about design and implementation of software and hardware on Cybersecurity schemes and algotihms. Everyone, who does the best works on above fields, will be invited to attend SHDI symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
-                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-		   <div class="footer removeborder">
-                    &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2019.html">SHDI Symposium-2019</a>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2020.html">SHDI Symposium-2020</a>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                </p>
+		    <div class="footer1 removeborder">
+		    <p style="text-indent:2em ">With rapid development of cyberspace security, artificial intelligence and cloud computing, researchers have constructed a large number of schemes, and designed many algorithms. In the meanwhile, the needs of industry and users are also growing urgently. Therefore, it is necessary to solve the software and hardware implementations of designed schemes and algorithms. The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation provide a good foundation and opportunity for solving the above problems.</a><br/>
+                    </div>
+		     <div class="footer2 removeborder">
+		 <p style="text-indent:2em ">International Software and Hardware Design and Implementation Conference would like to invit well-known researchers all over the world to present their best works about design and implementation of software and hardware on Cybersecurity schemes and algotihms. Everyone, who does the best works on above fields, will be invited to attend SHDI conference, and present their works. We would like to provid tranvel funding for the invited speakers.</a><br/>
+                 <p style="text-indent:2em "><a href="SHDI-2019.html">SHDI Conference-2019</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="SHDI-2020.html">SHDI Conference-2020</a><br/>
+                    <p style="text-indent:2em "><a href="SHDI-2021.html">SHDI Conference-2021</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="SHDI-2022.html">SHDI Conference-2022</a><br/>
+               </div>
+	     <div class="footer4 removeborder">
+			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
+		    </div>
 		</div>
             </div> 
     </div>
