--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -73,11 +73,8 @@
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
                                 </li>
-                                 <li class="submenu">
-                                    <a href="project.html">Projects</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="product.html">Products</a>
+                                   <li class="submenu">
+                                    <a href="Research.html">Research</a>
                                 </li>
 				<li class="submenu">
                                     <a href="About us Introduction.html">About us</a>
