--- a/News.html
+++ b/News.html
@@ -273,7 +273,7 @@ var p21=document.getElementById("p21");
 		  <p style="text-align:center"></a> <br/>
 	     </div>
 	     <div class="footer4 removeborder">
-			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>		
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 	     </div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
