--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -203,7 +203,7 @@
                     </div>
                     <p>Cooperation: <img src="image/图层%201(1).png" style="width:18%; height:18%;margin: 10px;"></a> <br/>
                     <div class="footer4 removeborder">
-			 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:18%; height:18%; margin: 10px 20px;" ><strong>©2016 DFSC Center</strong></a> <br/>   
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>	   
                     </div>                   
         </div>
 <script type="text/javascript">
