--- a/Research.html
+++ b/Research.html
@@ -232,8 +232,8 @@ date.setTime(date.getTime() - skew)
 		<div class="footer1 removeborder">
 		    <p style="text-align:center"></a> <br/>
 		       </div>   
-		    <div class="footer2 removeborder">
-			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
+		   <div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>		  
 		    </div>
         </div>
 <script type="text/javascript">
