--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -130,11 +130,8 @@
 			<p><a href="Register.html">Register</a></p>
 		        <p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc" download="Conference and Training Camp Registration Form-注册登记表.doc">Registration Form(注册登记表)</a></p>
 			</div>	
-	<div class="footer2 removeborder">
-                <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
-		</div>		   
-		<div class="footer3 removeborder">
-                <p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>
+	 <div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>
 		</div>
         </div>
 <script type="text/javascript">
