--- a/AI syllabus.html
+++ b/AI syllabus.html
@@ -149,6 +149,10 @@ date.setTime(date.getTime() - skew)
                               <hr>
                      
         </div>	 
+	    <div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div> 
 <script type="text/javascript">
 function googleTranslateElementInit() {
 new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
