--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -146,7 +146,10 @@ date.setTime(date.getTime() - skew)
                     <p style="text-indent:2em ">*Trainee Driector<br/>
                               <hr>
             
-                     
+                <div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div>      
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
