--- a/CSAC Introduction.html
+++ b/CSAC Introduction.html
@@ -96,8 +96,9 @@
                     <p style="text-indent:2em "><a href="CSAC-2018.html">CSAC Conference-2018</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="CSAC-2019.html">CSAC Conference-2019</a> <br/>
                      <p style="text-indent:2em "><a href="CSAC-2020.html">CSAC Conference-2020</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="CSAC-2021.html">CSAC Conference-2021</a> <br/>
 	           <div class="footer4 removeborder">
-			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
-		    </div>   
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div>  
 		    
             </div> 
             </div>	    
