--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -278,6 +278,10 @@
                     邮箱：linzjiang(#)hotmail(dot)com
                     <br/>
                 </p>-->
+		<div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div> 
         </div>	
         <script type="text/javascript">
          function googleTranslateElementInit() {
