--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -313,6 +313,10 @@
                                 </tr>
                                 </tbody>
                             </table>
+				<div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div> 
                         </div>
                     </div>
                 </div>
