--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -99,8 +99,9 @@
                  <p style="text-indent:2em "><a href="QPQC-2020.html">QPQC Conference-2020</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="QPQC-2021.html">QPQC Conference-2021</a><br/>
 		  </div>
 	     <div class="footer4 removeborder">
-			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
-		    </div>
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div> 
             </div> 
             </div>
     <script type="text/javascript">
