--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -98,8 +98,9 @@
                     <p style="text-indent:2em "><a href="SHDI-2021.html">SHDI Conference-2021</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="SHDI-2022.html">SHDI Conference-2022</a><br/>
                </div>
 	     <div class="footer4 removeborder">
-			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
-		    </div>
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div> 
 		</div>
             </div> 
     </div>
