--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -204,6 +204,10 @@
 	             </table>
                 </tbody>
             </table>
+				<div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div> 
         </div>
         <div id="stay-info">
         </div>
