--- a/SMPC-2020.html
+++ b/SMPC-2020.html
@@ -82,6 +82,10 @@
             <div id="speaker">
                
             </div> 
+		<div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		</div> 
             <div class="main2">
             <div id="main2">
                 <div id="contents">	    
