--- a/Research.html
+++ b/Research.html
@@ -201,7 +201,7 @@ date.setTime(date.getTime() - skew)
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 20px">Projects</p>
+                    <p style="text-align: center;font-size: 20px"><strong>Projects</strong></p>
 <!--                      <hr color="bisque"> -->
 		 <div class="section1 removeborder">
                     <p style="text-indent:2em ">Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
@@ -212,10 +212,8 @@ date.setTime(date.getTime() - skew)
                      <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
 		    </div>
 <!--                  <hr color="bisque"> -->
-	        <div class="footer removeborder">
-                <p style="text-indent:2em ">Projects Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
-		</div> 
-		  <p style="text-align: center;font-size: 20px">Products</p>
+	       
+		  <p style="text-align: center;font-size: 20px"><strong>Products</strong></p>
 		  <!--               <hr size='1'> -->
 		  		<div class="section3 removeborder">
 		                      <p style="text-indent:2em ">Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
@@ -226,9 +224,7 @@ date.setTime(date.getTime() - skew)
 		                       <p style="text-indent:2em ">*Lattice-based Cryptography Implementation Demo<br/>
 		  		</div>  
 		  <!-- 	            <hr size='1'> -->
-		  		<div class="footer3 removeborder">
-		                  <p style="text-indent:2em ">Products Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
-		  		</div>
+		  		
 		<div class="footer1 removeborder">
 		    <p style="text-align:center"></a> <br/>
 		       </div>   
