--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
 		<table border="0">
 			<tr>
-				<td><strong><span style="background-color:pansy;">Data Security and Users Privacy</span></strong></td>
+				<td><strong><span style="background-color:purple;">Data Security and Users Privacy</span></strong></td>
 				<td><strong><span style="background-color:pink;">Internet of Things Application and Security</span></strong></td>				
 			</tr>
 			<tr>
@@ -122,8 +122,8 @@
 				<td height="200px"><img src="image/DFSC图片3.png" style="width:80%; height:80%;"></td>				
 			</tr>
 			<tr>
-				<td><strong><span style="background-color:mauve;">Blockchain and Application</strong></td>
-				<td><strong><span style="background-color:amber;">CloudNative Application and Security</strong></td>
+				<td><strong><span style="background-color:rubine;">Blockchain and Application</strong></td>
+				<td><strong><span style="background-color:skyblue;">CloudNative Application and Security</strong></td>
 			</tr>
 			<tr>
 				<td height="200px"><img src="image/DFSC图片2.png" style="width:80%; height:80%;"></td>
