--- a/News.html
+++ b/News.html
@@ -54,7 +54,7 @@
                        background-color:#CCC;
                        border:#039 solid 1px;
                        overflow:hidden;
-					   text-align: left;
+		       text-align: center;
               }
           #news li{
                        line-height:30px;
@@ -66,6 +66,7 @@
                        background-color:#CCC;
                        border:#039 solid 1px;
                        overflow:hidden;
+		       text-align: center;
                 }
          #news1 li{
                        line-height:30px;
