--- a/News.html
+++ b/News.html
@@ -48,36 +48,37 @@
 		  	font-size:18px;
 		  }
          #news{
-                       width:300px;
+                       width:500px;
                        height:200px;
-                       margin:25px;
                        background-color:#CCC;
+					   margin: 30px 300px;
                        border:#039 solid 1px;
                        overflow:hidden;
-		       text-align: center;
+		               text-align: left;
               }
           #news li{
                        line-height:30px;
                   }
           #news1{
-                       width:300px;
+                       width:500px;
                        height:200px;
-                       margin:25px;
+                       margin: 30px 300px;
                        background-color:#CCC;
                        border:#039 solid 1px;
                        overflow:hidden;
-		       text-align: center;
+		               text-align: left;
                 }
          #news1 li{
                        line-height:30px;
                   }
 	#section{
-			width:400px;
+			width:500px;
 			height:502px;
-			margin:30px 55px;
+			margin:30px 300px;
 			background-color:#CCC;
 			border:#039 solid 1px;
 			overflow:auto;
+			text-align: left;
 		}
         .footer1{
 		       margin-top: 60px;	
@@ -139,7 +140,7 @@
 					<table>
                      <tr>
 			<td>
-			     <p style="margin: 0 55px;">Industrial News</p>
+			     <p style="margin: 0 300px;">Industrial News</p>
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
                                      <ul id="p1">
                                          <li><a href="" style="width: 70%; font-size: 15px;">**DFSC CENTER Joins EAPIAC Alliance!</a></li>
@@ -158,7 +159,7 @@
 			</tr>
 			<tr>
 			<td>
-				<p style="margin: 0 55px;">Research News</p>
+				<p style="margin: 0 300px;">Research News</p>
 				 <div id="news1" onmouseover="tz1()" onmouseout="ks1()">
 				 <ul id="p11">
 				 <li><a href="" style="width: 70%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
@@ -177,7 +178,7 @@
 				</tr>
 				<tr>
 	                <td>
-						<p style="margin: 0 55px;">News List</p>
+						<p style="margin: 0 300px;">News List</p>
 						<div id="section" onmouseover="tz2()" onmouseout="ks2()">
 							<ul id="p12">
 							<li><a href="" style="width: 70%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
