--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -31,6 +31,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
+	   
 	</style>
 </head>
 
@@ -77,7 +78,7 @@
             <div id="theme">
 <!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
-                <p style="text-align: center;" >网络空间安全与应用密码学国际研讨会-2020</p>
+                <p style="text-align: center; margin-top: 10px;" >网络空间安全与应用密码学国际研讨会-2020</p>
                 <p style="text-align: center;text-indent:2em; " >-CSAC-2020</p>
                 <hr/>
                 <p style="text-indent:2em; line-height:150%;"  >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
@@ -206,7 +207,7 @@
                             text-align: center;
                         }
                     </style>
-                    <table class="tableizer-table"style="margin: auto;" align="center">
+                    <table class="tableizer-table"style="margin: 10px;" align="center">
                         <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">会议报到</th></tr></thead>
                         <tbody>
                         <tr><td>08月28日<br></td><td colspan="3">会议报到&nbsp;&nbsp;腾讯网络会议室</td></tr>
@@ -294,7 +295,7 @@
                                 </tbody>
                             </table>
                             <table class="table" style="margin-top: -20px; ">
-                                <caption style="">住宿信息</caption>
+                                <caption style="margin-top: 10px;">住宿信息</caption>
                                 <tbody style="width: 73.5%;">
                                 <tr style="">
                                     <td style="width: 10%;">  </td>
@@ -304,17 +305,17 @@
                                 </tbody>
                             </table>
                             <table class="table" style="margin-top: -20px;">
-                                <caption style="">会议赞助与合作：</caption>
+                                <caption style="margin-top: 10px;">会议赞助与合作：</caption>
                                 <tbody style="width: 73.5%;">
                                 <tr>
                                     <td style="width: 5%;">  </td>
-                                    <td style="text-align: center; width: 60%">蒋林智; linzjiang(@)hotmail(dot)com</td>
+                                    <td style="text-align: center; width: 60%;">蒋林智; linzjiang(@)hotmail(dot)com</td>
                                     <td style="width: 5%;">  </td>
                                 </tr>
                                 </tbody>
                             </table>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center;margin-top: 10px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		</div> 
                         </div>
