--- a/News.html
+++ b/News.html
@@ -143,7 +143,7 @@
 			     <p style="margin: 0 180px;">Industrial News</p>
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
                                      <ul id="p1">
-                                         <li><a href="" style="width: 70%; font-size: 15px;">**DFSC CENTER Joins EAPIAC Alliance!</a></li>
+                                         <li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Joins EAPIAC Alliance!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with Qirange Company!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**Summer Training Camp Starts!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with FTG Research Group!</a></li>
@@ -185,7 +185,7 @@
 							<li><a href="" style="width: 70%; font-size: 15px;">**QPQC Conference-2021!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**DSPP Conference-2021!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**CCC Conference-2021!</a></li>
-							<li><a href="" style="width: 70%; font-size: 15px;">**DFSC CENTER Joins EAPIAC Alliance!</a></li>
+							<li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Joins EAPIAC Alliance!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with Qirange Company!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**Summer Training Camp Start!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with FTG Research Group!</a></li>
