--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -219,7 +219,7 @@
                 </table>
 
                 <table class="table table3">
-                    <caption>
+                    <caption style="margin-top: -60px;">
                             会议赞助与合作联系: 蒋林智； linzjiang#hotmail dot com
                     </caption>
                     <tbody >
@@ -278,7 +278,7 @@
                     <br/>
                 </p>-->
 		<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center; margin-top: -60px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		</div> 
         </div>	
