--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -88,18 +88,18 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents" class="personnel2">
-                        <p align="center" class="organization">会议组委会(排名不分先后顺序)<br/></p>
+                        <p class="organization">会议组委会(排名不分先后顺序)<br/></p>
 <p align="center">来学嘉&nbsp&nbsp&nbsp王杰&nbsp&nbsp&nbsp裴定一 陈克非 吴文玲 杨义先 温巧燕 谷大武 林东岱&nbsp&nbsp&nbsp李晖&nbsp&nbsp&nbsp毛文波<br/></p>
 <p align="center">&nbsp&nbsp&nbsp冯荣权 戚文峰&nbsp&nbsp张卫明 马建峰 徐茂智 刘胜利 张方国 徐秋亮 &nbsp张福泰 &nbsp李凤华&nbsp&nbsp&nbsp杨波&nbsp&nbsp&nbsp&nbsp<br/></p> 
 <p align="center">&nbsp&nbsp任奎&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp许春香 &nbsp唐韶华&nbsp&nbsp&nbsp郑东&nbsp&nbsp&nbsp王良民 李丽香&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp吴铤&nbsp&nbsp&nbsp&nbsp祝烈煌 &nbsp路荣幸 <br/></p> 
 <p align="center">&nbsp&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp&nbsp翁健&nbsp&nbsp&nbsp陈晓峰 伍前红 黄欣沂 孔凡玉 吕继强&nbsp&nbsp&nbsp刘哲&nbsp&nbsp&nbsp屈龙江 &nbsp&nbsp石文昌&nbsp&nbsp&nbsp&nbsp禹勇&nbsp&nbsp&nbsp&nbsp <br/></p>
 
 <br/><br/>
-                         <p align="center" class="organization">会议主席<br/></p>
+                         <p class="organization">会议主席<br/></p>
                         <p align="center">刘建伟（北京航空航天大学）<br/></p>
-                        <p align="center" class="organization">会议程序委员会主席<br/></p>
+                        <p class="organization">会议程序委员会主席<br/></p>
                         <p align="center">蒋林智（University of Surrey）<br/></p>
-                         <p align="center" class="organization">会议程序委员会副主席<br/></p>
+                         <p class="organization">会议程序委员会副主席<br/></p>
                         <p align="center">关振宇 李大伟 （北京航空航天大学）<br/></p>
                          <p align="center" class="organization">会议程序委员会<br/></p>
                         <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
